--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,4 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/icon/logo.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chrome Extension + React + TS + Vite</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/popup/index.tsx"></script>
-  </body>
+<html lang="en" class="main_html">
+  <body id="app"></body>
 </html>
